cabal-version: 1.12

name:           BaseStation
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/JackTheEngineer/BaseStation#readme>
homepage:       https://github.com/JackTheEngineer/BaseStation#readme
bug-reports:    https://github.com/JackTheEngineer/BaseStation/issues
author:         Jakov Kholodkov
maintainer:     kjakov88@gmail.com
copyright:      Jakov Kholodkov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/JackTheEngineer/BaseStation

library
  exposed-modules:
      Lib
  other-modules:
      Paths_BaseStation
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , binary
    , binary-parsers
    , binary-strict
    , bytestring
    , cairo
    , colour
    , data-binary-ieee754
    , data-default-class
    , gi-cairo
    , gi-gdk
    , gi-gdkpixbuf
    , gi-glib
    , gi-gtk
    , haskell-gi-base
    , lens
    , old-time
    , plot
    , random
    , rio
    , serialport
    , stm
    , text
    , time
    , transformers
    , vector
  default-language: Haskell2010

executable BaseStation-exe
  main-is: Main.hs
  other-modules:
      ClockExample
      PID_Optimization
      UartInterface
      Paths_BaseStation
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      BaseStation
    , base >=4.7 && <5
    , binary
    , binary-parsers
    , binary-strict
    , bytestring
    , cairo
    , colour
    , data-binary-ieee754
    , data-default-class
    , gi-cairo
    , gi-gdk
    , gi-gdkpixbuf
    , gi-glib
    , gi-gtk
    , haskell-gi-base
    , lens
    , old-time
    , plot
    , random
    , rio
    , serialport
    , stm
    , text
    , time
    , transformers
    , vector
  default-language: Haskell2010

test-suite BaseStation-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_BaseStation
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      BaseStation
    , base >=4.7 && <5
    , binary
    , binary-parsers
    , binary-strict
    , bytestring
    , cairo
    , colour
    , data-binary-ieee754
    , data-default-class
    , gi-cairo
    , gi-gdk
    , gi-gdkpixbuf
    , gi-glib
    , gi-gtk
    , haskell-gi-base
    , lens
    , old-time
    , plot
    , random
    , rio
    , serialport
    , stm
    , text
    , time
    , transformers
    , vector
  default-language: Haskell2010
